--- a/ansible/roles/domain-controller/tasks/main.yml
+++ b/ansible/roles/domain-controller/tasks/main.yml
@@ -45,9 +45,11 @@
     $scope = Get-DhcpServerv4Scope
     if (!($scope.Name -eq '{{ dns_domain_name }}-Scope')) {
     Add-DhcpServerv4Scope -Name '{{ dns_domain_name }}-Scope' -StartRange {{ dhcp_start_range }} -EndRange {{ dhcp_end_range }} -SubnetMask {{ dhcp_subnetmask }} -State Active
-    Set-DhcpServerv4OptionValue -OptionID 3 -Value {{ dhcp_router }} -ScopeID {{ dhcp_start_range }} -ComputerName {{ hostname }}.{{ dns_domain_name }} 
+
+    Set-DhcpServerv4OptionValue -OptionID 3 -Value {{ dhcp_router }} -ScopeID {{ dhcp_start_range }} -ComputerName $($env:COMPUTERNAME).{{ dns_domain_name }} 
     Set-DhcpServerv4OptionValue -DnsDomain {{ dns_domain_name }} -DnsServer {{ host_ipaddress }} -Router {{ dhcp_router }}
-    Add-DhcpServerInDC -DnsName {{ hostname }}.{{ dns_domain_name }} -IPAddress {{ host_ipaddress }}
+    
+    Add-DhcpServerInDC -DnsName $($env:COMPUTERNAME).{{ dns_domain_name }} -IPAddress {{ ansible_host }}
     }
   when: lookup('env', 'platform') != 'azure' 
 
