--- a/ansible/roles/domain-controller/tasks/main.yml
+++ b/ansible/roles/domain-controller/tasks/main.yml
@@ -40,16 +40,20 @@
     include_management_tools: yes
   when: lookup('env', 'platform') != 'azure' 
 
+- name: Debug
+  ansible.builtin.debug:
+    msg: "{{ inventory_hostname }}.{{ dns_domain_name }}"
+
 - name: Create DHCP config
   win_shell: |
     $scope = Get-DhcpServerv4Scope
     if (!($scope.Name -eq '{{ dns_domain_name }}-Scope')) {
-    Add-DhcpServerv4Scope -Name '{{ dns_domain_name }}-Scope' -StartRange {{ dhcp_start_range }} -EndRange {{ dhcp_end_range }} -SubnetMask {{ dhcp_subnetmask }} -State Active
+      Add-DhcpServerv4Scope -Name '{{ dns_domain_name }}-Scope' -StartRange {{ dhcp_start_range }} -EndRange {{ dhcp_end_range }} -SubnetMask {{ dhcp_subnetmask }} -State Active
 
-    Set-DhcpServerv4OptionValue -OptionID 3 -Value {{ dhcp_router }} -ScopeID {{ dhcp_start_range }} -ComputerName {{ inventory_hostname }}.{{ dns_domain_name }} 
-    Set-DhcpServerv4OptionValue -DnsDomain {{ dns_domain_name }} -DnsServer {{ ansible_host }} -Router {{ dhcp_router }}
-    
-    Add-DhcpServerInDC -DnsName {{ inventory_hostname }}.{{ dns_domain_name }} -IPAddress {{ ansible_host }}
+      Set-DhcpServerv4OptionValue -OptionID 3 -Value {{ dhcp_router }} -ScopeID {{ dhcp_start_range }} -ComputerName {{ inventory_hostname }}.{{ dns_domain_name }} 
+      Set-DhcpServerv4OptionValue -DnsDomain {{ dns_domain_name }} -DnsServer {{ ansible_host }} -Router {{ dhcp_router }}
+      
+      Add-DhcpServerInDC -DnsName {{ inventory_hostname }}.{{ dns_domain_name }} -IPAddress {{ ansible_host }}
     }
   when: lookup('env', 'platform') != 'azure' 
 
