--- a/.devops/pipelines/vmware/ansible.yml
+++ b/.devops/pipelines/vmware/ansible.yml
@@ -5,6 +5,9 @@ parameters:
 - name: ansible_playbook
   type: string
 
+- name: working_dir
+  type: string
+
 jobs:
   - job: ansible
     displayName: Configure infrastructure
@@ -63,26 +66,26 @@ jobs:
       inputs:
         script: | 
           terraform init -backend-config=$(backend.secureFilePath) -input=false 
-        workingDirectory: '$(Build.Repository.LocalPath)/terraform/vmware'
+        workingDirectory: ${{parameters.working_dir}}
 
     - task: CmdLine@2
       displayName: Terraform select or create workspace
       inputs:
         script: | 
           terraform workspace select flowers || terraform workspace new flowers
-        workingDirectory: '$(Build.Repository.LocalPath)/terraform/vmware'
+        workingDirectory: ${{parameters.working_dir}}
 
     - task: CmdLine@2
       displayName: Terraform pull state
       inputs:
         script: 'terraform state pull > download.tfstate'
-        workingDirectory: '$(Build.Repository.LocalPath)/terraform/vmware'
+        workingDirectory: ${{parameters.working_dir}}
 
     - task: PowerShell@2
       displayName: Generate Ansible inventory file 
       inputs:
         filePath: '$(Build.Repository.LocalPath)/ansible/powershell/GenerateInventory.ps1'
-        arguments: '-StateFile $(Build.Repository.LocalPath)/terraform/vmware/download.tfstate -InventoryFile $(Build.Repository.LocalPath)/ansible/inventory'
+        arguments: '-StateFile  ${{parameters.working_dir}}/download.tfstate -InventoryFile $(Build.Repository.LocalPath)/ansible/inventory'
 
     - script:  ansible --version
       displayName: 'Ansible version'
