--- a/ansible/domain.yml
+++ b/ansible/domain.yml
@@ -14,6 +14,7 @@
   hosts: dc
   roles:
   - domain-controller
+  - domain-config
   vars:
     ansible_connection: winrm
     ansible_winrm_transport: ntlm
