--- a/ansible/roles/mssql/defaults/main.yml
+++ b/ansible/roles/mssql/defaults/main.yml
@@ -10,7 +10,7 @@ mssql_temp_download_path: D:\tmp
 # instance details
 mssql_instance_name: MSSQLSERVER
 mssql_drive: D
-mssql_userdbvol_name: GoEucSQL
+mssql_userdbvol_name: GO
 mssql_port: 1433
 
 ### Memory Configuration ###
@@ -32,17 +32,17 @@ mssql_suppress_reboot: False
 
 ### Service Accounts ###
 mssql_base_ldap_path: "OU=ServiceAccounts,OU=GO,DC=GO,DC=EUC"
-domain_controller:
+domain_controller: groups['ddc'][0]
 
 # SQL Service Account
 # regex statements used in some steps expect the format of CONTOSO\
 # do not use @CONTOSO.com for these accounts as SQL install will fail
 mssql_sqlsvc_account: GO\sql_svc
-mssql_sqlsvc_account_pass:
+mssql_sqlsvc_account_pass: "{{ ansible_password }}"
 
 # SQL Agent Service Account
 mssql_agentsvc_account: GO\sql_agt
-mssql_agentsvc_account_pass:
+mssql_agentsvc_account_pass: "{{ ansible_password }}"
 
 # SQL Analysis Services Account
 mssql_assvc_account: "{{ mssql_sqlsvc_account }}"
