--- a/.devops/pipelines/vmware/ansible.yml
+++ b/.devops/pipelines/vmware/ansible.yml
@@ -91,5 +91,8 @@ jobs:
         export ANSIBLE_USER="$(build_username)"
         export ANSIBLE_PASSWORD="$(build_password)"
 
+        export citrix_username="$(citrix_username)"
+        export citrix_password="$(citrix_password)"
+
         ansible-playbook $(Build.Repository.LocalPath)/ansible/${{ parameters.ansible_playbook }} -i $(Build.Repository.LocalPath)/ansible/inventory -e ansible_user='{{ lookup("env", "ANSIBLE_USER") }}' -e ansible_password='{{ lookup("env", "ANSIBLE_PASSWORD") }}'
       displayName: 'Execute ansible'
