--- a/ansible/roles/citrix-delivery-controller/tasks/main.yml
+++ b/ansible/roles/citrix-delivery-controller/tasks/main.yml
@@ -80,12 +80,16 @@
     src: files/Get-CTXBinary.ps1
     dest: C:\Download\Citrix\Get-CTXBinary.ps1
 
-- name: Download Citrix Optimizer Tool
+- name: Download Citrix Virtual Apps and Desktops 2203
   win_shell: C:\Download\Citrix\Get-CTXBinary.ps1 -DownloadNumber 20428 -DownloadFileName "Citrix_Virtual_Apps_and_Desktops_7_2203.iso" -DownloadPath C:\Download\Citrix\ -MyCitrixUsername "{{ citrix_username }}" -MyCitrixPassword "{{ citrix_password }}"
   register: citrix_download
 
+- name: Debug Citrix download
+  ansible.builtin.debug:
+    msg: "{{ citrix_download }}"
+
 - name: Ensure an ISO is mounted
-  community.windows.win_disk_image:
+  win_disk_image:
     image_path: "{{ citrix_download | trim }}"
     state: present
   register: disk_image_out
