Using the STDOut

--- a/ansible/roles/citrix-delivery-controller/tasks/main.yml
+++ b/ansible/roles/citrix-delivery-controller/tasks/main.yml
@@ -90,7 +90,7 @@
 
 - name: Ensure an ISO is mounted
   win_disk_image:
-    image_path: "{{ citrix_download | trim }}"
+    image_path: "{{ citrix_download.stdout | trim }}"
     state: present
   register: disk_image_out
 
