--- a/ansible/roles/citrix-delivery-controller/tasks/main.yml
+++ b/ansible/roles/citrix-delivery-controller/tasks/main.yml
@@ -75,6 +75,11 @@
     path: C:\Download\Citrix
     state: directory
 
+- name: Check if Citrix ISO is downloaded yet
+  win_stat:
+    path: C:\Download\Citrix\Citrix_Virtual_Apps_and_Desktops_7_2203.iso
+  register: download_file
+
 - name: Copy a single file
   ansible.windows.win_copy:
     src: files/Get-CTXBinary.ps1
@@ -83,14 +88,25 @@
 - name: Download Citrix Virtual Apps and Desktops 2203
   win_shell: C:\Download\Citrix\Get-CTXBinary.ps1 -DownloadNumber 20428 -DownloadFileName "Citrix_Virtual_Apps_and_Desktops_7_2203.iso" -DownloadPath C:\Download\Citrix\ -MyCitrixUsername "{{ citrix_username }}" -MyCitrixPassword "{{ citrix_password }}"
   register: citrix_download
+  when: download_file.stat.exists == False
+
+- name: Register iso path
+  set_fact:
+    iso_path: C:\Download\Citrix\Citrix_Virtual_Apps_and_Desktops_7_2203.iso
+  when: download_file.stat.exists == True
+
+- name: Register iso path
+  set_fact:
+    iso_path: "{{citrix_download.stdout | trim }}"
+  when: download_file.stat.exists == False
 
 - name: Debug Citrix download
   ansible.builtin.debug:
-    msg: "{{ citrix_download }}"
+    msg: "{{ iso_path }}"
 
 - name: Ensure an ISO is mounted
   win_disk_image:
-    image_path: "{{ citrix_download.stdout | trim }}"
+    image_path: "{{ iso_path }}"
     state: present
   register: disk_image_out
 
