Username and password

--- a/ansible/roles/citrix-license-server/tasks/main.yml
+++ b/ansible/roles/citrix-license-server/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Built the environment dictonary and variables
+  set_fact:
+    citrix_username: "{{ lookup('env', 'citrix_username') }}"
+    citrix_password: "{{ lookup('env', 'citrix_password') }}"
+
 - name: Install Citrix License Server Pre-Reqs
   win_feature:
     name:
