Cleanup in the files and included the datastore

--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -128,8 +128,8 @@
     path: C:\ProgramData\LoadGen\Director
     state: directory
 
-# - name: Configure the LoadGen Datasource
-#   include: datasource.yml
+- name: Configure the LoadGen Datasource
+  include: datasource.yml
 
 # - name: Configure the LoadGen Options
 #   include: options.yml
