--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -99,9 +99,11 @@
 
 - name: Run AutoUpdater for LoadGen Studio
   win_command: '"C:\Program Files\LoadGen\AutoUpdater.exe" -i "C:\ProgramData\LoadGen\Download\Studio\AutoUpdate.dat"'
-  args:
-    chdir: C:\Program Files\LoadGen\
   when: loadgen_studio.stat.exists == False
+  vars:
+    ansible_become: yes
+    ansible_become_user: system
+    ansible_become_method: runas
 
 - name: Check if LoadGen Analyzer is installed
   win_stat:
