--- a/ansible/roles/citrix-delivery-controller/tasks/config.yml
+++ b/ansible/roles/citrix-delivery-controller/tasks/config.yml
@@ -1,32 +1,32 @@
 ---
-# - name: Install Site Script
-#   win_copy:
-#     src: "{{ item }}"
-#     dest: C:\Logs\
-#   with_fileglob:
-#   - "*.ps1"
+- name: Install Site Script
+  win_copy:
+    src: "{{ item }}"
+    dest: C:\Logs\
+  with_fileglob:
+  - "*.ps1"
 
-# - name: Create or Join Site
-#   win_shell: |
-#     $env:SiteName = '{{ SiteName }}'
-#     $env:DatabaseServer = '{{ environment_abbreviations }}-{{ DatabaseServer }}'
-#     $env:DatabaseServerPort = '{{ DatabaseServerPort }}'
-#     $env:DatabaseName_Site = '{{ DatabaseName_Site }}'
-#     $env:DatabaseName_Logging = '{{ DatabaseName_Logging }}'
-#     $env:DatabaseName_Monitoring = '{{ DatabaseName_Monitoring }}'
-#     $env:LicenseServer = '{{ environment_abbreviations }}-{{ LicenseServerName }}'
-#     $env:LicenseServerPort = '{{ LicenseServerPort }}'
-#     $env:LicensingModel = '{{ LicensingModel }}'                  
-#     $env:ProductCode = '{{ ProductCode }}'                                   
-#     $env:ProductEdition = '{{ ProductEdition }}'
-#     $env:AdminGroup = '{{ netbios_domain }}\{{ AdminGroup }}'
-#     $env:Role =   '{{ Role }}'
-#     $env:Scope = '{{ Scope }}'                                 
-#     $env:GroomingDays = '{{ GroomingDays }}'
-#     C:\Logs\createsite.ps1 -creates C:\Logs\sitedone.txt
-#   register: result
-#   become: yes
-#   become_method: runas
-#   become_user: GO\Administrator
-#   vars:
-#     ansible_become_password: "{{ ansible_password }}"
+- name: Create or Join Site
+  win_shell: |
+    $env:SiteName = '{{ SiteName }}'
+    $env:DatabaseServer = '{{ environment_abbreviations }}-{{ DatabaseServer }}'
+    $env:DatabaseServerPort = '{{ DatabaseServerPort }}'
+    $env:DatabaseName_Site = '{{ DatabaseName_Site }}'
+    $env:DatabaseName_Logging = '{{ DatabaseName_Logging }}'
+    $env:DatabaseName_Monitoring = '{{ DatabaseName_Monitoring }}'
+    $env:LicenseServer = '{{ environment_abbreviations }}-{{ LicenseServerName }}'
+    $env:LicenseServerPort = '{{ LicenseServerPort }}'
+    $env:LicensingModel = '{{ LicensingModel }}'                  
+    $env:ProductCode = '{{ ProductCode }}'                                   
+    $env:ProductEdition = '{{ ProductEdition }}'
+    $env:AdminGroup = '{{ netbios_domain }}\{{ AdminGroup }}'
+    $env:Role =   '{{ Role }}'
+    $env:Scope = '{{ Scope }}'                                 
+    $env:GroomingDays = '{{ GroomingDays }}'
+    C:\Logs\createsite.ps1 -creates C:\Logs\sitedone.txt
+  register: result
+  become: yes
+  become_method: runas
+  become_user: GO\Administrator
+  vars:
+    ansible_become_password: "{{ ansible_password }}"
