--- a/ansible/management.yml
+++ b/ansible/management.yml
@@ -14,7 +14,7 @@
   roles:
   - domain-join
   - visual-studio-code
-  - loadgen
+  # - loadgen
   vars:
     dns_domain_name: 'GO.EUC'
     domain_name: GO
