--- a/ansible/roles/citrix-storefront/tasks/main.yml
+++ b/ansible/roles/citrix-storefront/tasks/main.yml
@@ -1,3 +1,9 @@
 ---
 - name: Install Citrix Storefront
   include: install.yml
+
+- name: Init Citrix Storefront
+  include: init.yml
+
+- name: Join Citrix Storefront
+  include: join.yml
